opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/file_path"
bug-reports: "https://github.com/janestreet/file_path/issues"
dev-repo: "git+https://github.com/janestreet/file_path.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/file_path/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "ppx_stable_witness"
  "dune"               {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "A library for typed manipulation of UNIX-style file paths"
description: "
A library for typed manipulation of UNIX-style file paths.
"
